@@ -292,6 +292,7 @@ S3method(nobs, epidataCS)
 S3method("[", epidataCS)
 S3method(update, epidataCS)
 export(update.epidataCS)                # for convenience
+export(permute.epidataCS)
 S3method(head, epidataCS)
 S3method(tail, epidataCS)
 S3method(print, epidataCS)
